WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
295003
[css-anchor-position-1] Scrolling anchor doesn't trigger fallback when anchored box's containing block is the scroller
https://bugs.webkit.org/show_bug.cgi?id=295003
Summary
[css-anchor-position-1] Scrolling anchor doesn't trigger fallback when anchor...
fantasai
Reported
2025-06-25 19:09:24 PDT
Overview: In cases where the containing block of an anchored box is a scroll container that also contains the anchor, we are not triggering fallback as we scroll the box into to the edge of the containing block. WPTs assume that this is the required behavior, however. Affected WPT Tests:
http://wpt.live/css/css-anchor-position/
* anchor-scroll-position-try-* * position-area-scrolling-00[567] * position-try-fallbacks-003 Specification Notes: It's not 100% clear what the correct behavior is, i.e. whether the anchored box is contained by the scroll container's outer padding edge, or by its inner (scrollable) padding edge. On the root element, only fixed-positioned boxes are contained by the scrollport edge; absolutely-positioned boxes are contained by the scrollable area (roughly speaking). So this might need some investigation.
Attachments
WIP
(52.13 KB, patch)
2025-08-10 20:38 PDT
,
fantasai
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-06-25 19:09:31 PDT
<
rdar://problem/154349365
>
fantasai
Comment 2
2025-07-10 23:26:28 PDT
Discussed this with Tab, we agree that the tests where the containing block is the scroller are wrong -- scrolling these should not trigger fallback. But for the tests where the containing block is an ancestor of the scroller, those should trigger fallback.
fantasai
Comment 3
2025-08-10 20:38:56 PDT
Created
attachment 476346
[details]
WIP Attaching WIP. Still have a few failing tests to fix up (anchor-scroll-nested, anchor-scroll-to-sticky-002, and position-visibility-anchors-visible-change-anchor are newly failing, so I have to figure out why). But it fixes the first five anchor-scroll-position-try, and hopefully sets us up to pass the remaining ones once last-remembered-fallback is fixed, and also fixes the js-expose test.
fantasai
Comment 4
2025-08-13 00:15:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/49318
EWS
Comment 5
2025-08-15 12:47:57 PDT
Committed
298770@main
(90fc9aa7e180): <
https://commits.webkit.org/298770@main
> Reviewed commits have been landed. Closing PR #49318 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug