Source/WebCore/style/StyleTreeResolver.cpp
@@ -1682,8 +1682,7 @@ void TreeResolver::updateForPositionVisibility(RenderStyle& style, const Styleab
     };
 
     // FIXME: Implement via "visibility: force-hidden".
-    if (shouldHideAnchorPositioned())
-        style.setIsForceHidden();
+    style.setIsForceHidden(shouldHideAnchorPositioned());
 }
 
 const RenderStyle* TreeResolver::beforeResolutionStyle(const Element& element, std::optional<PseudoElementIdentifier> pseudo)
